<resources>
    <string name="app_name">Milestone Android</string>
    <string name="APP">Milestone</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="uname">Username</string>
    <string name="Sign_up">Sign up</string>
    <string name="L_G_S">Let\'s Get Started</string>
    <string name="Sign_In">Sign In</string>
    <string name="Dont_have_account">Don\'t have an account?</string>
    <string name="refresh">Refresh</string>
    <string name="feed">Feed</string>
    <string name="todo">TODO</string>
    <string name="Post">POST</string>
    <string name="select">Select Image</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
